--- a/app/resource/css/header.css
+++ b/app/resource/css/header.css
@@ -96,7 +96,7 @@
    box-sizing: border-box;
    color: #335;
    font-size: 16px;
-   background-color: #f8f8f8;
+   background-color: #f0f0f0;
    border: 1px solid transparent;
    /* border-radius: 3px; */
    transition: background-color 0.2s ease;
@@ -106,7 +106,7 @@
 .search input[type="text"]:focus {
    background-color: #fff;
    outline: none;
-   border-color: #224;
+   border: 1px solid #446;
 }
 
 .search button {
