--- a/app/resource/css/styles.css
+++ b/app/resource/css/styles.css
@@ -1,131 +1,5 @@
-* {
-   margin: 0;
-}
-
-html {
-   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-.wrapper {
-   padding: 0 15px;
-   margin: 0 auto;
-   max-width: 960px;
-}
-
-.wrapper-form {
-   margin: 50px auto;
-   max-width: 350px;
-   padding: 25px 15px 15px;
-   text-align: center;
-   background-color: #88a;
-}
-
-.flex {
-   display: flex;
-   column-gap: 50px;
-}
-
-h1 {
-   margin-bottom: 0;
-}
-
-h2 {
-   margin: 30px 0 10px;
-}
-
-h3, h4 {
-   margin: 15px 0 0;
-}
-
-.dn {
-   display: none;
-}
-
-form.verify {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   padding: 15px 0;
-}
-
-.verify button {
-   padding: 5px 15px;
-   font-size: 20px;
-   font-weight: bold;
-}
-
-.verify label {
-   display: block;
-   font-size: 14px;
-   text-align: left;
-}
-
-.verify input {
-   /* display: block; */
-   margin: 10px 0;
-   padding: 5px 10px;
-   width: 90%;
-   font-size: 16px;
-   font-weight: bold;
-   background-color: #f0f0f0;
-   outline: none;
-   border: 2px solid transparent;
-}
-
-.verify input:hover,
-.verify input:focus {
-   background-color: #fff;
-   outline: none;
-   border: 2px solid #446;
-}
-
-input::placeholder {
-   font-weight: normal;
-}
-
-.error-unique,
-.error-wrong,
-.er_text,
-.error::placeholder {
-   color: red;
-   font-size: 12px;
-}
-
-.tableUsers {
-   margin: 15px;
-}
-
-.quizForm td,
-.quizResults th,
-.quizResults td,
-.allUsers th,
-.allUsers td {
-   padding: 5px 10px;
-   text-align: center;
-   border: 1px solid #111;
-   background-color: #ddf;
-}
-
-.button {
-   display: inline-block;
-   margin: 5px 0;
-   padding: 5px 10px;
-   color: #111;
-   font-weight: bold;
-   text-decoration: none;
-   background-color: #394;
-   border: 1px solid #446;
-   /* border-radius: 3px; */
-   transition: all .5s ease;
-}
-
-.button:hover {
-   background-color: #5f6;
-   cursor: pointer;
-}
-
-.ava {
-   display: inline-block;
-   width: 70px;
-   height: 70px;
+.header {
+   position: sticky;
+   top: 0;
+   z-index: 1;
 }
