--- a/app/resource/css/styles.css
+++ b/app/resource/css/styles.css
@@ -3,3 +3,37 @@
    top: 0;
    z-index: 1;
 }
+
+.wrapper {
+   margin-top: 60px;
+}
+
+table th,
+table td {
+   /* padding: 5px; */
+   border: 2px solid #333;
+}
+
+.table_input {
+   margin-top: -2px;
+}
+
+.table_input input {
+   border-radius: 0;
+   border: 2px solid transparent;
+   cursor: default;
+}
+
+.table_input input:focus {
+   outline: none;
+   cursor: text;
+   border: 2px solid #444;
+}
+
+input[type="number"] {
+   max-width: 60px;
+}
+
+.table_input td {
+   border: 2px solid #212529;
+}
