--- a/app/resource/css/styles.css
+++ b/app/resource/css/styles.css
@@ -8,6 +8,23 @@
    margin-top: 60px;
 }
 
+/* .flex {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+   column-gap: 15px;
+   row-gap: 15px;
+}
+
+.figure {
+   padding: 10px;
+   min-width: 300px;
+   min-height: 33vw;
+   border: 2px solid #333;
+   border-radius: 5px;
+} */
+
 table th,
 table td {
    border: 2px solid #333;
@@ -45,7 +62,7 @@ textarea {
    max-height: 140px;
 }
 
-/* Warning: Bootstrap' styles changed! */
+/* Warning: Bootstrap's styles changed! */
 .offcanvas {
    --bs-offcanvas-width: 20vw;
 }
